# tsyparty

./: .env.example  .gitignore  AGENTS.md  CITATION.cff  Makefile  README.md  pyproject.toml  reproduce.sh  requirements.txt
.github/workflows/: pages.yml
configs/: behavior.yml  events.yml  inference.yml  instruments.yml  sectors.yml  sources.yml
data/sample/: example_features.csv  example_margins.csv
docs/: claims_and_limits.md  data_dictionary.md  methodology.md  series_registry.csv  source_audit.md
notebooks/: 01_source_audit.py  02_reconciliation.py  03_counterparty_demo.py  README.md
outputs/sample/: example_baseline_matrix.csv  example_dense_entropy_matrix.csv  example_diagnostics.csv  example_similarity_distances.csv  example_sparse_matrix.csv
paper/: manuscript_outline.md
scripts/: bootstrap.sh  download_all_public.py  generate_example_outputs.py
site/: behavior.html  holdings.html  index.html  inference.html  methodology.html
site/css/: components.css  design-system.css
site/js/: data-loader.js  sector-colors.js  theme.js
slides/: defense_outline.md
tests/: test_accounting.py  test_auction_parser.py  test_behavior_pipeline.py  test_checks.py  test_cli_smoke.py  test_configs.py  test_contracts.py  test_counterparty.py  test_crosscheck.py  test_crosscheck_validation.py  test_dealer.py  test_efa.py  test_enrich.py  test_fiscaldata.py  test_flows.py  test_fwtw.py  test_h8.py  test_harmonize.py  test_infer_pipeline.py  test_primary_market.py  test_registry.py  test_similarity.py  test_soma.py  test_tic.py  test_z1_parser.py
(+70 files in other folders)
